fix align of text from

--- a/tokyo-denki-univ/src/tdu.css
+++ b/tokyo-denki-univ/src/tdu.css
@@ -5,8 +5,8 @@
 
 .inputValue {
     margin: 0;
-    width: 99%;
-    font-size:  3rem;
+    width: 100%;
+    font-size: 3rem;
     color: #2d56a0;
     text-align: center;
     background-color: white;
@@ -18,6 +18,7 @@
 
 .shuffleValue, .display {
     margin: 1rem;
+    text-align: center;
 }
 
 .reload {
